Updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             </div>
 
             <div class="playback-features">
-                <button class="feature-btn" id="shuffle-btn">
+                <button class="feature-btn" id="shuffle-btn" title="Shuffle">
                     <i class="fas fa-random"></i>
                 </button>
-                <button class="feature-btn" id="repeat-btn">
+                <button class="feature-btn" id="replay-btn" title="Replay">
                     <i class="fas fa-redo"></i>
                 </button>
             </div>
